--- a/style.css
+++ b/style.css
@@ -207,6 +207,10 @@ section {
     animation: professionRotate 13s ease-out infinite;
 }
 
+.h{
+    line-height: 50px;
+}
+
 @keyframes professionRotate {
 
     0%,
@@ -461,78 +465,6 @@ span {
     color: #333;
 }
 
-.testimonial-container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    padding: 5rem 1rem;
-}
-
-.testimonial-container .testimonial-wrapper {
-    position: relative;
-    max-width: 90rem;
-    width: 100%;
-    padding: 5rem;
-}
-
-.testimonial-wrapper .testimonial-box {
-    padding: 1rem;
-    border-radius: 2rem;
-    overflow: hidden;
-}
-
-.testimonial-content .testimonial-slide {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    background: var(--bg-color);
-    border-radius: 2rem;
-    box-shadow: 0 .1rem .5rem var(--shadow-color);
-    padding: 3rem 5rem;
-    border-top: .8rem solid var(--main-color);
-    border-bottom: .8rem solid var(--main-color);
-}
-
-.testimonial-slide img {
-    width: 14rem;
-    height: 14rem;
-    object-fit: cover;
-    border-radius: 50%;
-    border: .5rem solid var(--bg-color);
-    outline: .5rem solid var(--main-color);
-}
-
-.testimonial-slide h3 {
-    font-size: 2.5rem;
-    margin: 2rem 0;
-}
-
-.testimonial-slide p {
-    font-size: 1.4rem;
-    text-align: center;
-}
-
-.testimonial-box .swiper-button-next,
-.testimonial-box .swiper-button-prev {
-    color: var(--main-color);
-}
-
-.testimonial-box .swiper-button-next {
-    right: 0;
-}
-
-.testimonial-box .swiper-button-prev {
-    left: 0;
-}
-
-.testimonial-box .swiper-pagination-bullet {
-    background: rgba(0, 0, 0, .8);
-}
-
-.testimonial-box .swiper-pagination-bullet-active {
-    background: var(--main-color);
-}
 
 .contact {
     min-height: auto;
@@ -680,7 +612,6 @@ img {
 
     .navbar a.active::before {
         background: var(--main-color);
-        opacity: .7;
     }
 
     .home .home-content {
@@ -742,7 +673,7 @@ img {
         color: var(--text-color);
         margin-bottom: .1rem;
     }
-
+    
     .navbar {
         position: absolute;
         top: 100%;
@@ -938,5 +869,57 @@ img {
 @media (max-width: 315px) {
     .home-content h1 {
         font-size: 4.5rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .home {
+        padding: 10rem 3% 23rem;
+        text-align: center;
+    }
+
+    .home-content h1 {
+        font-size: 4.5rem;
+    }
+
+    .home-content p {
+        font-size: 1.4rem;
+    }
+
+    .social-media a {
+        margin: 1.5rem 1rem;
+    }
+
+    .btn {
+        margin-top: 3rem;
+    }
+
+    .profession-container {
+        position: static;
+        transform: none;
+        width: auto;
+        height: auto;
+    }
+
+    .profession-box {
+        position: relative;
+        margin-top: 3rem;
+    }
+
+    .profession {
+        flex-direction: row;
+        margin-bottom: 1.5rem;
+    }
+
+    .profession i {
+        margin-right: 1rem;
+    }
+
+    .circle {
+        display: none;
+    }
+
+    .overlay {
+        display: none;
     }
 }
